--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -2633,5 +2633,108 @@ stories:
   state: Alabama
   domain: http://www.oanow.com/
   link: https://www.oanow.com/apwire/news/state/toxic-bacteria-mean-fewer-people-on-mississippi-s-beaches/article_dd1ad8f5-5451-5011-bad8-f34753a2d439.html
+images:
+- name: old-gas-pumps-oldgaspumps-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-internet-numbers.jpg
+- name: catacombs-catacombs-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-asteroids.jpg
+- name: oldhousecars-house-old-cars-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-gan-vogh.jpg
+- name: old-house-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
+- name: fence-mexico-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purple-storm.jpg
+- name: oldbarn-oldbarn-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-umberto-bocc.jpg
+- name: subway-subway-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colorful-dream.jpg
+- name: birdhouse-birdhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-umberto-bocc.jpg
+- name: stories-power-lines-empty-space-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-copper-circuit.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
+- name: gears-4882162452-fa3126b38d-b-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-post-modern.jpg
+- name: oldhotel-oldhotel-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-cinnamon-rolls.jpg
+- name: sand-hand-sand-hand-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-rain.jpg
+- name: stories-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-racks-clouds-clean-view.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
+- name: powerlines-power-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-yellow-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
+- name: old-barn-old-barn-1500-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-dream.jpg
+- name: containership-containership-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-kand-two.jpg
+- name: blossombar-cinnamon-rolls-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-cinnamon-rolls-file-00-00-50-62.jpg
+- name: flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-graham-sutherland.jpg
+- name: border-fence-border-fence-on-hill-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-marcel-duchamp.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-copper-circuit-2.JPG
+- name: fence-mexico-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gan-vogh.jpg
+- name: gypsy-wagon-gypsywagon-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-electricity.jpg
+- name: meadowbutterfly-meadow-butterfly-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-oily-mcoilface.jpg
+- name: castle-wall-DSC-0067-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-marcel-duchamp.JPG
+- name: fast-lights-freeway-redes-fast-flux-623x425-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-jap-dys-1.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-brush.JPG
+- name: locked-up-steam-lock-up-steam-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-post-modern.jpg
+- name: fence-fence-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-diego-rivera1.jpg
+- name: old-granary-field-oldhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-rainbow-festival.jpg
+- name: old-door-lock-old-door-lock-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-horiz-circuit.jpg
+- name: rain-princess-DSC_0015.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
+- name: mosaic-face-mosaic-face-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-aqua.jpg
+- name: crow_ww2_color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_ww2_color.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+- name: stories-new-68-174-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-174-800-500-0-max-0--5--1.jpg
+- name: locked-up-steam-lock-up-steam-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-yellow-paper.jpg
+- name: art-museum-art-museum-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-kand-two.jpg
+- name: old-barn-old-barn-1500-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
+- name: server-cloud-server-racks-clouds-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-far-away.jpg
+- name: scream-IMG_E3643.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_E3643.jpg
+- name: oldhouse-granaryfield-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-circuit.jpg
+- name: catacombs-catacombs-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colorful-dream.jpg
+- name: old-church-oldchurch-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gan-vogh.jpg
+- name: liberty-back-statue-liberty-back-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purple-pond.jpg
+- name: rockingchair-rockingchair-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-plentiful.jpg
+- name: copper-circuit-DSC_0035-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0035-2.jpg
+- name: carry-load-carryload-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
 ---
 Annual Art In The West.&nbsp;Farm Bureau Seeks Photographs For 100th Anniversary.&nbsp;Quakes Push Californians To Prepare For The Dreaded 'Big One.&nbsp;Minneapolis Man Gets Nine Years For Cannon Falls Home Invasion.&nbsp;Construction Begins At Garden Of The Gods, Stalls At Strawberry Fields.&nbsp;How Immunotherapy Is Changing Lives For People With Allergies.&nbsp;Champ Featured In Town Of Plattsburgh.&nbsp;Israeli Minister Likens Jewish Intermarriage To 'Holocaust'.&nbsp;
